// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command payload schemas The schema for command ADD_USER_TO_GROUP should have the expected value 1`] = `
Object {
  "groupId": Object {
    "isArray": false,
    "isOptional": false,
    "type": "UUID",
  },
  "userId": Object {
    "isArray": false,
    "isOptional": false,
    "type": "UUID",
  },
}
`;

exports[`command payload schemas The schema for command CREATE_MEDIA_ITEM should have the expected value 1`] = `
Object {
  "contributions": Object {
    "isArray": true,
    "isOptional": false,
    "type": Object {
      "contributorId": Object {
        "isArray": false,
        "isOptional": false,
        "type": "NON_EMPTY_STRING",
      },
      "role": Object {
        "isArray": false,
        "isOptional": false,
        "type": "NON_EMPTY_STRING",
      },
    },
  },
  "id": Object {
    "isArray": false,
    "isOptional": false,
    "type": "UUID",
  },
  "mimeType": Object {
    "enumLabel": "MIME Type",
    "enumName": "MIME_TYPE",
    "isArray": false,
    "isOptional": false,
    "labelsAndValues": Array [
      Object {
        "label": "mp3",
        "value": "audio/mpeg",
      },
      Object {
        "label": "mp4",
        "value": "video/mp4",
      },
    ],
    "type": "Enum",
  },
  "rawData": Object {
    "isArray": false,
    "isOptional": true,
    "type": "RAW_DATA",
  },
  "title": Object {
    "isArray": false,
    "isOptional": true,
    "type": "NON_EMPTY_STRING",
  },
  "titleEnglish": Object {
    "isArray": false,
    "isOptional": true,
    "type": "NON_EMPTY_STRING",
  },
  "url": Object {
    "isArray": false,
    "isOptional": false,
    "type": "URL",
  },
}
`;

exports[`command payload schemas The schema for command CREATE_SONG should have the expected value 1`] = `
Object {
  "audioURL": Object {
    "isArray": false,
    "isOptional": false,
    "type": "URL",
  },
  "contributions": Object {
    "isArray": true,
    "isOptional": false,
    "type": Object {
      "contributorId": Object {
        "isArray": false,
        "isOptional": false,
        "type": "NON_EMPTY_STRING",
      },
      "role": Object {
        "isArray": false,
        "isOptional": false,
        "type": "NON_EMPTY_STRING",
      },
    },
  },
  "id": Object {
    "isArray": false,
    "isOptional": false,
    "type": "UUID",
  },
  "lyrics": Object {
    "isArray": false,
    "isOptional": true,
    "type": "NON_EMPTY_STRING",
  },
  "rawData": Object {
    "isArray": false,
    "isOptional": true,
    "type": "RAW_DATA",
  },
  "title": Object {
    "isArray": false,
    "isOptional": true,
    "type": "NON_EMPTY_STRING",
  },
  "titleEnglish": Object {
    "isArray": false,
    "isOptional": true,
    "type": "NON_EMPTY_STRING",
  },
}
`;

exports[`command payload schemas The schema for command CREATE_USER_GROUP should have the expected value 1`] = `
Object {
  "description": Object {
    "isArray": false,
    "isOptional": false,
    "type": "NON_EMPTY_STRING",
  },
  "id": Object {
    "isArray": false,
    "isOptional": false,
    "type": "UUID",
  },
  "label": Object {
    "isArray": false,
    "isOptional": false,
    "type": "NON_EMPTY_STRING",
  },
}
`;

exports[`command payload schemas The schema for command GRANT_USER_ROLE should have the expected value 1`] = `
Object {
  "role": Object {
    "enumLabel": "User Role",
    "enumName": "CoscradUserRole",
    "isArray": false,
    "isOptional": false,
    "labelsAndValues": Array [
      Object {
        "label": "admin",
        "value": "projectAdmin",
      },
      Object {
        "label": "viewer",
        "value": "viewer",
      },
      Object {
        "label": "COSCRAD admin",
        "value": "superAdmin",
      },
    ],
    "type": "Enum",
  },
  "userId": Object {
    "isArray": false,
    "isOptional": false,
    "type": "UUID",
  },
}
`;

exports[`command payload schemas The schema for command PUBLISH_SONG should have the expected value 1`] = `
Object {
  "id": Object {
    "isArray": false,
    "isOptional": false,
    "type": "UUID",
  },
}
`;

exports[`command payload schemas The schema for command REGISTER_USER should have the expected value 1`] = `
Object {
  "id": Object {
    "isArray": false,
    "isOptional": false,
    "type": "UUID",
  },
  "userIdFromAuthProvider": Object {
    "isArray": false,
    "isOptional": false,
    "type": "NON_EMPTY_STRING",
  },
  "username": Object {
    "isArray": false,
    "isOptional": false,
    "type": "NON_EMPTY_STRING",
  },
}
`;
